[gd_scene load_steps=4 format=3 uid="uid://bkihh0ts7l5gf"]

[ext_resource type="Theme" uid="uid://bxn4varkeqdbj" path="res://theme/TerminalTheme.tres" id="1_ede40"]
[ext_resource type="Script" uid="uid://cbrn6lxsq5i4d" path="res://scripts/hack_container.gd" id="2_cejxg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cejxg"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 1

[node name="HackContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ede40")
script = ExtResource("2_cejxg")

[node name="StageLabels" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StageNumber" type="RichTextLabel" parent="StageLabels"]
layout_mode = 2
text = "Stage 1"
fit_content = true
horizontal_alignment = 1

[node name="StageName" type="RichTextLabel" parent="StageLabels"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 10
text = "  ____  _____ ____ ___  _   _ 
 |  _ \\| ____/ ___/ _ \\| \\ | |
 | |_) |  _|| |  | | | |  \\| |
 |  _ <| |__| |__| |_| | |\\  |
 |_| \\_\\_____\\____\\___/|_| \\_|"
fit_content = true
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2
theme_override_constants/separation = 20
theme_override_styles/separator = SubResource("StyleBoxFlat_cejxg")

[node name="BattleInfo" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20

[node name="RichTextLabel" type="RichTextLabel" parent="BattleInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "IP Addresses x 1"
horizontal_alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BattleInfo"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="BattleInfo/VBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_horizontal = 4

[node name="SuccessLabel" type="RichTextLabel" parent="BattleInfo/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 10
text = "Success chance: 50%"
fit_content = true
horizontal_alignment = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="BattleInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "Other info"
